added translation of --- remove, loged in as, personal.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -75,7 +75,7 @@ ja:
   layout: 'レイアウト'
   layouts: 'レイアウト'
   log_out: 'ログアウト'
-  logged_in_as: 'Logged in as'
+  logged_in_as: 'ログイン名'
   login: 'ログイン'
   modify: '変更'
   more: '拡大'
@@ -100,7 +100,7 @@ ja:
     saved: "ページをセーブしました。"
   password: 'パスワード'
   password_confirmation: 'パスワードの確認を入力して下さい。'
-  personal: 'Personal'
+  personal: '個人情報'
   personal_preferences: 'プリファレンス'
   please_login: 'ログインしてください'
   powered_by: 'Powered by'
@@ -113,7 +113,7 @@ ja:
   published_on: '発行日：'
   reference: 'ヘルプ'
   remember_me: '次回から自動的にログイン'
-  remove: 'Remove'
+  remove: '削除'
   remove_layout: 'レイアウトを除く'
   remove_page: 'ページを除く'
   remove_pages: '{{pages}}を除く'
