--- a/README
+++ b/README
@@ -8,7 +8,7 @@ git clone git://github.com/radiant/radiant-japanese_language_pack-extension.git 
 
 でコピー。
 
-config／environment.rb　を書き換えます。
+config/environment.rb　を書き換えます。
 
   config.extensions = [ :japanese_language_pack, :all ]
 
