A Japanese word added.'通常のページ'

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -115,6 +115,7 @@ ja:
   new_user: 'ユーザ追加'  
   'no': 'いいえ'
   no_pages: 'ページがない'
+  normal_page: '通常のページ'
   notes: 'ノート'
   optional: 'オプション'
   or: 'または'
